@@ -61,6 +61,14 @@
 static char THIS_FILE[] = __FILE__;
 #endif
 
+/**
+ * @brief Default relative path to "My Documents" for private filters.
+ * We want to use WinMerge folder as general user-file folder in future.
+ * So it makes sense to have own subfolder for filters.
+ */
+static const TCHAR DefaultRelativeFilterPath[] = _T("WinMerge\\Filters");
+
+
 /////////////////////////////////////////////////////////////////////////////
 // CMergeApp
 
@@ -744,4 +752,38 @@ CString CMergeApp::GetDefaultEditor()
 {
 	CString path = paths_GetWindowsDirectory() + _T("\\NOTEPAD.EXE");
 	return path;
+}
+
+/**
+ * @brief Get default user filter folder path.
+ * This function returns the default filter path for user filters.
+ * If wanted so (@p bCreate) path can be created if it does not
+ * exist yet. But you really want to create the patch only when
+ * there is no user path defined.
+ * @param [in] bCreate If TRUE filter path is created if it does
+ *  not exist.
+ * @return Default folder for user filters.
+ */
+CString CMergeApp::GetDefaultFilterUserPath(BOOL bCreate /*=FALSE*/)
+{
+	CString pathMyFolders = paths_GetMyDocuments(NULL);
+	CString pathFilters(pathMyFolders);
+	if (pathFilters.Right(1) != _T("\\"))
+		pathFilters += _T("\\");
+	pathFilters += DefaultRelativeFilterPath;
+
+	if (bCreate && !paths_CreateIfNeeded(pathFilters))
+	{
+		// Failed to create a folder, check it didn't already
+		// exist.
+		DWORD errCode = GetLastError();
+		if (errCode != ERROR_ALREADY_EXISTS)
+		{
+			// Failed to create a folder for filters, fallback to
+			// "My Documents"-folder. It is not worth the trouble to
+			// bother user about this or user more clever solutions.
+			pathFilters = pathMyFolders;
+		}
+	}
+	return pathFilters;
 }
